Fix for 100vh on mobile

--- a/sass/base/elements/_body.scss
+++ b/sass/base/elements/_body.scss
@@ -1,3 +1,9 @@
+html {
+	height: -webkit-fill-available;
+}
+
 body {
 	background: $color__background-body; // Fallback for when there is no custom background color defined.
+	min-height: 100vh;
+	min-height: -webkit-fill-available;
 }
